--- a/style.css
+++ b/style.css
@@ -4,8 +4,12 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    /* align-items: center; */
+    /* justify-content:space-between; */
+    /* flex: 1; */
 }
+
+/* Header */
 
 .header {
     display: flex;
@@ -31,28 +35,39 @@ body {
     font-size: 18px;
 }
 
+/* Hero */
+
 .hero {
     position: relative;
     width: 100vw;
-    /* height: 100vh; */
+    height: 25vh;
+    /* min-height: auto; */
     display: flex;
     justify-content: center;
     gap: 300px;
-    background-color: slategray;
+    background-color: #1f2937;
     /* margin: 50px; */
     padding-top: 50px;
     padding-bottom: 50px;
     color: white;
+
+    flex: stretch;
+    /* flex: 1; */
 }
 
 .hero-content {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    flex-shrink: 0;
+    /* width: max-content; */
+    /* flex: 1; */
+    /* margin: 50px; */
 }
 
 .placeholder {
-
+    display: flex;
+    align-items: center;
 }
 
 .hero-title {
@@ -60,9 +75,20 @@ body {
     font-weight: 900;
 }
 
-.hero-subtitle{
+.hero-subtitle {
     font-size: 18px;
 }
+
+.hero-button {
+    width: 100px;
+    background-color: #3882f6;
+    color: white;
+    font-weight: bold;
+    border-radius: 10px;
+    height: 32px;
+}
+
+/* Footer */
 
 .footer {
     display: flex;
@@ -71,4 +97,86 @@ body {
     height: 36px;
     background-color:#1f2937;
     color: white;
+}
+
+/* Info */
+
+.info {
+    background-color: white;
+    /* height: 25vh; */
+    padding: 50px;
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    flex-grow: 1;
+    align-items: center;
+}
+
+.info-title {
+    text-align: center;
+    margin-top: 50px;
+}
+
+
+p {
+    width: 200px;
+    text-align: center;
+}
+
+/* Quote */
+
+.quote {
+    background-color: #e5e7eb;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-grow: 1;
+}
+
+.quote-text {
+    text-align: center;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    margin: 50px;
+}
+
+.quote-source {
+    text-align: right;
+    margin-right: 50px;
+}
+
+/* Sign Up */
+
+.sign-up {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto; 
+    margin-top: 50px;
+    margin-bottom: 50px;
+    background-color: #3882f6;
+    /* width: 700px; */
+    color: white;
+    border-radius: 15px;
+    padding: 20px;
+    gap: 200px;
+    max-width: 700px;
+    /* text-align: center; */
+}
+
+.sign-up-text {
+    margin-left: 25px;
+}
+
+.sign-up-button {
+    width: 150px;
+    background-color: #3882f6;
+    color: white;
+    font-weight: bold;
+    border-radius: 10px;
+    height: 36px;
+    font-size: 18px;
+    margin-right: 50px;
 }
